TreeSE == tse, SE == se

--- a/04_containers.Rmd
+++ b/04_containers.Rmd
@@ -70,36 +70,36 @@ abundance. These are typically stored in _**assays**_.
 ```{r}
 library(mia)
 data(GlobalPatterns, package="mia")
-se <- GlobalPatterns
-assays(se)
+tse <- GlobalPatterns
+assays(tse)
 ```
 
 The `assays` slot contains the experimental data as count matrices. Multiple 
 matrices can be stored the result of `assays` is actually a list of matrices.
 
 ```{r}
-assays(se)
+assays(tse)
 ```
 
 Individual assays can be accessed via `assay`
 
 ```{r}
-assay(se, "counts")[1:5,1:7]
+assay(tse, "counts")[1:5,1:7]
 ```
 
 To illustrate the use of multiple assays, the relative abundance data can be 
 calcualted and stored along the original count data using `relAbundanceCounts`.
 
 ```{r}
-se <- relAbundanceCounts(se)
-assays(se)
+tse <- relAbundanceCounts(tse)
+assays(tse)
 ```
 
-Now there are two assays available in the `se` object, `counts` and 
+Now there are two assays available in the `tse` object, `counts` and 
 `relabundance`.
 
 ```{r}
-assay(se, "relabundance")[1:5,1:7]
+assay(tse, "relabundance")[1:5,1:7]
 ```
 
 
@@ -113,7 +113,7 @@ fact a requirement for any `SummarizedExperiment` object.
 `colData` contains data on the samples.
 
 ```{r coldata}
-colData(se)
+colData(tse)
 ```
 
 ### rowData
@@ -122,7 +122,7 @@ colData(se)
 interest for the microbiome field this is used to store taxonomic information.
 
 ```{r rowdata}
-rowData(se)
+rowData(tse)
 ```
 
 ### rowTree  
@@ -133,13 +133,13 @@ relations via two functions, `rowTree` and `rowLinks`.
 
 A tree can be accessed via `rowTree` as `phylo` object.       
 ```{r rowtree}
-rowTree(se)
+rowTree(tse)
 ```
 
 The links to the individual features are available through `rowLinks`.
 
 ```{r rowlinks}
-rowLinks(se)
+rowLinks(tse)
 ```
 
 Please note that there can be a 1:1 relationship between tree nodes and 
@@ -176,18 +176,18 @@ the samples are matched.
 
 ```{r}
 # Agglomerate the data to Phylym level
-se.phylum <- agglomerateByRank(se, "Phylum")
+tse_phylum <- agglomerateByRank(tse, "Phylum")
 # both have the same number of columns (samples)
-dim(se)
-dim(se.phylum)
+dim(tse)
+dim(tse_phylum)
 
 # Add the new table as an alternative experiment
-altExp(se, "Phylum") <- se.phylum
-altExpNames(se)
+altExp(tse, "Phylum") <- tse_phylum
+altExpNames(tse)
 
 # Pick a sample subset: this acts on both altExp and assay data
-se[,1:10]
-dim(altExp(se[,1:10],"Phylum"))
+tse[,1:10]
+dim(altExp(tse[,1:10],"Phylum"))
 ```
 
 For more details of altExp have a look at the [Intro vignette](https://bioconductor.org/packages/release/bioc/vignettes/SingleCellExperiment/inst/doc/intro.html) of the 
@@ -554,7 +554,7 @@ set. This is a larger collection with a bit longer download time.
 
 ```{r, message=FALSE, eval=FALSE}
 library(curatedMetagenomicData)
-se <- curatedMetagenomicData("Vatanen*", dryrun = FALSE, counts = TRUE)
+tse <- curatedMetagenomicData("Vatanen*", dryrun = FALSE, counts = TRUE)
 ```
 
 
