--- a/11_taxonomic_information.Rmd
+++ b/11_taxonomic_information.Rmd
@@ -8,7 +8,7 @@ chapterPreamble()
 ```{r, message=FALSE}
 library(mia)
 data("GlobalPatterns", package="mia")
-se <- GlobalPatterns 
+tse <- GlobalPatterns 
 ```
 
 Taxonomic information is a key part of analyzing microbiome data and without
@@ -53,36 +53,36 @@ found on the [DECIPHER website](http://www2.decipher.codes/Classification.html).
 `checkTaxonomy` checks whether the taxonomic information is usable for `mia`
 
 ```{r}
-checkTaxonomy(se)
+checkTaxonomy(tse)
 ```
 
 Since the `rowData` can contain other data, `taxonomyRanks` will return the 
 columns `mia` assumes to contain the taxonomic information.
 
 ```{r}
-taxonomyRanks(se)
+taxonomyRanks(tse)
 ```
 
 This can then be used to subset the `rowData` to columns needed.
 
 ```{r}
-rowData(se)[,taxonomyRanks(se)]
+rowData(tse)[,taxonomyRanks(tse)]
 ```
 
 `taxonomyRankEmpty` checks for empty values in the given `rank` and returns a 
 logical vector of `length(x)`.
 
 ```{r}
-all(!taxonomyRankEmpty(se, rank = "Kingdom"))
-table(taxonomyRankEmpty(se, rank = "Genus"))
-table(taxonomyRankEmpty(se, rank = "Species"))
+all(!taxonomyRankEmpty(tse, rank = "Kingdom"))
+table(taxonomyRankEmpty(tse, rank = "Genus"))
+table(taxonomyRankEmpty(tse, rank = "Species"))
 ```
 
 `getTaxonomyLabels` is a multi-purpose function, which turns taxonomic
 information into a character vector of `length(x)`
 
 ```{r}
-head(getTaxonomyLabels(se))
+head(getTaxonomyLabels(tse))
 ```
 
 By default, this will use the lowest non-empty information to construct a
@@ -90,10 +90,10 @@ string with the following scheme `level:value`. If all levels are the same,
 this part is omitted, but can be added by setting `with_rank = TRUE`.
 
 ```{r}
-phylum <- !is.na(rowData(se)$Phylum) & 
-    vapply(data.frame(apply(rowData(se)[,taxonomyRanks(se)[3:7]],1L,is.na)),all,logical(1))
-head(getTaxonomyLabels(se[phylum,]))
-head(getTaxonomyLabels(se[phylum,], with_rank = TRUE))
+phylum <- !is.na(rowData(tse)$Phylum) & 
+    vapply(data.frame(apply(rowData(tse)[,taxonomyRanks(tse)[3:7]],1L,is.na)),all,logical(1))
+head(getTaxonomyLabels(tse[phylum,]))
+head(getTaxonomyLabels(tse[phylum,], with_rank = TRUE))
 ```
 
 By default the return value of `getTaxonomyLabels` contains only unique elements
@@ -101,7 +101,7 @@ by passing it through `make.unique`. This step can be omitted by setting
 `make_unique = FALSE`.
 
 ```{r}
-head(getTaxonomyLabels(se[phylum,], with_rank = TRUE, make_unique = FALSE))
+head(getTaxonomyLabels(tse[phylum,], with_rank = TRUE, make_unique = FALSE))
 ```
 
 To apply the loop resolving function `resolveLoop` from the
@@ -114,12 +114,12 @@ To create a taxonomic tree, `taxonomyTree` used the information and returns a
 `phylo` object. Duplicate information from the `rowData` is removed.
 
 ```{r}
-taxonomyTree(se)
+taxonomyTree(tse)
 ```
 
 ```{r}
-se <- addTaxonomyTree(se)
-se
+tse <- addTaxonomyTree(tse)
+tse
 ```
 
 The implementation is based on the `toTree` function from the
@@ -134,29 +134,29 @@ changing conditions through these levels. For this `mia` contains the
 is as an alternative experiment.
 
 ```{r}
-se <- relAbundanceCounts(se)
-altExp(se, "Family") <- agglomerateByRank(se, rank = "Family",
-                                          agglomerateTree = TRUE)
-altExp(se, "Family")
+tse <- relAbundanceCounts(tse)
+altExp(tse, "Family") <- agglomerateByRank(tse, rank = "Family",
+                                           agglomerateTree = TRUE)
+altExp(tse, "Family")
 ```
 
 If multiple assays (counts and relabundance) exist, both will be agglomerated.
 
 ```{r}
-assayNames(se)
-assayNames(altExp(se, "Family"))
+assayNames(tse)
+assayNames(altExp(tse, "Family"))
 ```
 
 ```{r}
-assay(altExp(se, "Family"), "relabundance")[1:5,1:7]
+assay(altExp(tse, "Family"), "relabundance")[1:5,1:7]
 ```
   
 ```{r}
-assay(altExp(se, "Family"), "counts")[1:5,1:7]
+assay(altExp(tse, "Family"), "counts")[1:5,1:7]
 ```
 
 `altExpNames` now consists of `Family` level data. This can be extended to use 
-any level present in `r mia::taxonomyRanks(se)`.   
+any level present in `r mia::taxonomyRanks(tse)`.   
 
 ## Data transformation
 
@@ -175,24 +175,24 @@ For complete list of available transformations and parameters, see function
 [help](https://microbiome.github.io/mia/reference/transformCounts.html).
 
 ```{r}
-se <- transformSamples(x = se, abund_values = "counts", method = "clr", 
-                       pseudocount = 1, name = "clr_transformation")
+tse <- transformSamples(x = tse, abund_values = "counts", method = "clr", 
+                        pseudocount = 1, name = "clr_transformation")
 
-head(assay(se, "clr_transformation"))
+head(assay(tse, "clr_transformation"))
 ```
 
 -   In 'pa' transformation, 'threshold' specifies the value that divides observations to
 be absent or present. By default, it is 0.
 
 ```{r}
-se <- transformFeatures(se, method = "pa", threshold = 10)
+tse <- transformFeatures(tse, method = "pa", threshold = 10)
 
-head(assay(se, "pa"))
+head(assay(tse, "pa"))
 ```
 
 ```{r}
 # list of abundance tables that assays slot contains
-assays(se)
+assays(tse)
 ```
 
 ## Pick specific  
@@ -203,7 +203,7 @@ in one sample.
 
 ### Abundances of all taxa in specific sample 
 ```{r}
-taxa.abund.cc1 <- getAbundanceSample(se, 
+taxa.abund.cc1 <- getAbundanceSample(tse, 
                                      sample_id = "CC1",
                                      abund_values = "counts")
 taxa.abund.cc1[1:10]
@@ -212,7 +212,7 @@ taxa.abund.cc1[1:10]
 ### Abundances of specific taxa in all samples   
 
 ```{r}
-taxa.abundances <- getAbundanceFeature(se, 
+taxa.abundances <- getAbundanceFeature(tse, 
                                       feature_id = "Phylum:Bacteroidetes",
                                       abund_values = "counts")
 taxa.abundances[1:10]
