--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -192,9 +192,9 @@ head(colData(tse)$relative)
 calculated with `estimateDiversity`.
 
 ```{r rarity-1}
-se <- mia::estimateDiversity(se, 
-                             abund_values = "counts",
-                             index = "log_modulo_skewness")
+tse <- mia::estimateDiversity(tse, 
+                              abund_values = "counts",
+                              index = "log_modulo_skewness")
 
 head(colData(se)$log_modulo_skewness)
 ```
@@ -206,7 +206,7 @@ A plot comparing all the diversity measures calculated above and stored in `colD
 ```{r plot-all-diversities}
 plots <- lapply(c("observed", "shannon","simpson", "relative", "faith","log_modulo_skewness"),
                 plotColData,
-                object = se,
+                object = tse,
                 x = "SampleType",
                 colour_by = "SampleType")
 
