--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -196,7 +196,7 @@ tse <- mia::estimateDiversity(tse,
                               abund_values = "counts",
                               index = "log_modulo_skewness")
 
-head(colData(se)$log_modulo_skewness)
+head(colData(tse)$log_modulo_skewness)
 ```
 
 
