Fixed the failure and improved beta diversity chapter

--- a/index.Rmd
+++ b/index.Rmd
@@ -18,6 +18,9 @@ url: "`r .gh_url`"
 ---
 
 
+
+
+
 # Welcome {-}
 
 
@@ -68,10 +71,14 @@ Attribution-NonCommercial
 --------------
 
 ```{r include=FALSE}
+library(Cairo)
+
 # global knitr options
 knitr::opts_chunk$set(
   fig.width=10,
-  dpi=300
+  dpi=300,
+  dev = "png",
+  dev.args = list(type = "cairo-png")
 )
 ```
 
