--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -391,7 +391,7 @@ PERMDISP2 method [@Anderson2006].
 
 
 ```{r}
-anova(vegan::betadisper(attr(reducedDim(tse,"BC"),"dist"),
+anova(vegan::betadisper(attr(reducedDim(tse,"PCoA_BC"),"dist"),
                         colData(tse)$Group))
 ```
 
