--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -11,13 +11,31 @@ chapterPreamble()
 
 Several R packages provide methods for the analysis and manipulation
 of `SummarizedExperiment` and related data containers. One of these is
-`mia`.
+`mia`. The installation for this and other packages has the following
+procedure.
 
-Install the Biocondcuctor development version with:
+Stable Biocondcuctor release version can be installed with:
+
+```{r eval=FALSE, message=FALSE}
+BiocManager::install("microbiome/mia")
+```
+
+Biocondcuctor development version requires the installation of the
+latest R beta version, and this is primarily recommended for those who
+already have solid experience with R/Bioconductor and need access to
+the latest experimental updates.
 
 ```{r eval=FALSE, message=FALSE}
 BiocManager::install("microbiome/mia", version="devel")
 ```
+
+The bleeding edge (and potentially unstable) development version lives
+in Github:
+
+```{r eval=FALSE, message=FALSE}
+devtools::install_github("microbiome/mia")
+```
+
 
 
 ## Some available packages
