--- a/40_biclustering.Rmd
+++ b/40_biclustering.Rmd
@@ -234,6 +234,11 @@ design <- c(
 plot(design)
 ```
 
+
+Annotaatioplottien korkeuden säätäminen näytteiden ja piirteiden suhteen perusteella?
+Esim. sarakkeiden annotaatioplotin korkeus pienemmäksi???? (Luultavasti täytyy
+säätää siinä kohtaa, kun kuvaajaa luodaan eikä vasta patchwork-kohdassa)
+
 ```{r, fig.width=10, fig.height=8}
 bicluster_plot <- row_annotation + heatmap + col_annotation + 
     plot_layout(design = design, 
@@ -243,6 +248,7 @@ bicluster_plot <- row_annotation + heatmap + col_annotation +
 
 bicluster_plot
 ```
+
 
 ## Session Info {-}
 
