--- a/40_biclustering.Rmd
+++ b/40_biclustering.Rmd
@@ -116,7 +116,7 @@ bicluster_features <- cbind(bicluster_features, df)
 bicluster_features$feature <- factor(rownames(bicluster_features), levels = rownames(bicluster_features))
 
 row_annotation <- ggplot(bicluster_features) + coord_equal(ratio = 1) + 
-    scale_fill_manual(breaks = c(TRUE, FALSE), values=c("red", "white"))
+    scale_fill_manual(breaks = c(TRUE, FALSE), values=c("red", "white"), expand = c(0,0))
 
 
 for( cluster in colnames(bicluster_features) ){
@@ -154,7 +154,7 @@ bicluster_samples <- cbind(bicluster_samples, df)
 bicluster_samples$sample <- factor(rownames(bicluster_samples), levels = rownames(bicluster_samples))
 
 col_annotation <- ggplot(bicluster_samples) + coord_equal(ratio = 1) + 
-    scale_y_discrete(position = "right") + 
+    scale_y_discrete(position = "right", expand = c(0,0)) + 
     scale_fill_manual(breaks = c(TRUE, FALSE), values=c("red", "white"))
 
 for( cluster in colnames(bicluster_samples) ){
@@ -176,7 +176,7 @@ for( cluster in colnames(bicluster_samples) ){
   }
 }
 
-col_annotation
+col_annotation 
 ```
 
 ```{r}
@@ -241,10 +241,16 @@ säätää siinä kohtaa, kun kuvaajaa luodaan eikä vasta patchwork-kohdassa)
 
 ```{r, fig.width=10, fig.height=8}
 bicluster_plot <- row_annotation + heatmap + col_annotation + 
-    plot_layout(design = design, 
-                widths = c(1, 1, 1), # Adjust widths to align plots
-                heights = c(1, 1, 1), 
-                guides = "collect")
+    plot_layout(design = design, guides = "collect",
+                # Adjust widths and heights to align plots.
+                # When annotation plot is larger, it might not fit into its column/row.
+                # Then you need to make column/row larger.
+                
+                # Relative widths and heights of each column and row:
+                # Currently, the size of the first column and row are 25 %
+                # the size of others
+                widths = c(0.25, 1, 1),
+                heights = c(0.25, 1, 1))
 
 bicluster_plot
 ```
