--- a/40_biclustering.Rmd
+++ b/40_biclustering.Rmd
@@ -247,9 +247,12 @@ bicluster_plot <- row_annotation + heatmap + col_annotation +
                 # Then you need to make column/row larger.
                 
                 # Relative widths and heights of each column and row:
-                # Currently, the size of the first column and row are 25 %
-                # the size of others
-                widths = c(0.25, 1, 1),
+                # Currently, the width of the first column is 15 % and the height of the 
+                # first row is 25 % the size of others
+                
+                # To get this work most of the times, you can adjust all sizes to be 1, i.e. equal, 
+                # but then the gaps between plots are larger.
+                widths = c(0.15, 1, 1),
                 heights = c(0.25, 1, 1))
 
 bicluster_plot
